--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-  width: 100%
+  width: 102.5%
+  
 }
 
 .jumbotron {
@@ -28,7 +29,7 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
+  border-top: 15px;
 }
 
 .row {
