--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ textarea{
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color:lightcyan;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -39,7 +39,7 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: lightcyan;
   color: #000000;
   border-top: 1px dashed #000000;
 }
